# redfoam

./: .gitignore  README.md
redfoam/: Cargo.toml  fix.sh  testsetup.sh
redfoam/src/: auth.rs  buff.rs  client.rs  config.rs  consumer.rs  er.rs  lib.rs  logger.rs  main.rs  producer.rs  tcp.rs  test_support.rs  topic.rs
redfoam/src/buff/: test.rs
redfoam/src/client/: test.rs
redfoam/src/topic/: test.rs
redfoam/testdata/test/: data  i0000000000000000
redfoam/tests/: tests.rs
