[package]
name = "redfoam"
version = "0.1.0"
authors = ["Graham Ramsey <graham.ramsey@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inotify = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
libc = "0.2"

[dev-dependencies]
rand = "0.7"
